# mcperiscope

./: .gitignore  README.md  dev.sh  pyproject.toml
backend/: auth_token.py  credentials.py  llm_client.py  main.py  mcp_manager.py  models.py  proxy_builder.py  state.py  url_validation.py
backend/auth/: oauth.py
backend/mcp_optimizer/: __init__.py  analyze.py  connections.py  inventory.py  proxy_generator.py  proxy_runtime.py  report.py  token_store.py
backend/routes/: analysis.py  auth_routes.py  connection.py  optimize.py  prompts.py  resources.py  results.py  tools.py
backend/tests/: test_credentials.py  test_proxy_builder_injection.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/connect/: AuthConfig.tsx  ConnectTab.tsx  ModelConfig.tsx
frontend/src/components/explore/: ContextBudget.tsx  ContextGauge.tsx  ExploreTab.tsx  InventoryBar.tsx  PromptDetail.tsx  ResourceDetail.tsx  Sidebar.tsx  ToolDetail.tsx  ToolStats.tsx
frontend/src/components/layout/: TabBar.tsx
frontend/src/components/optimize/: ContextModal.tsx  EvalHistory.tsx  OptimizeTab.tsx  PromptInput.tsx  RatingPanel.tsx  ResourcePicker.tsx  ToolChainViewer.tsx
frontend/src/components/results/: AnalystResults.tsx  ComparisonTable.tsx  ExportPanel.tsx  InventoryPanel.tsx  JudgeResults.tsx  OptimizeContextGauge.tsx  RecommendationCards.tsx  RecommendationsPanel.tsx  ResourcesModal.tsx  ResultsTab.tsx  (+2 more)
frontend/src/config/: models.ts
frontend/src/store/: index.ts
(+6 files in other folders)
