[project]
name = "mcperiscope"
version = "0.1.0"
description = "Web-based MCP server exploration and optimization tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.52.0",
    "openai>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[dependency-groups]
dev = ["pytest", "httpx"]
